data/derived/comb/progs/unify/prog4394.ml.out
Characters 179-183:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type int
